# careercompass

./: README.md  pyproject.toml
src/careercompass/: .gitignore  alembic.ini  crud.py  main.py  models.py  schemas.py
src/careercompass/alembic/versions/: 43ab870a0476_default_setup.py  bd47f7a0c407_adding_quick_task.py
src/careercompass/auth/: basic.py  crud.py  models.py  schemas.py
src/careercompass/tasks/: crud.py  router.py  schemas.py
